# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-03 20:09:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-5

    Summary:
      resources, add transactions to zodb resources
    Revision:
      itools--main--0.12--patch-5


    modified files:
     Changelog resources/zodb.py


2005-11-03 19:30:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-4

    Summary:
      resources, start support for ZODB resources
    Revision:
      itools--main--0.12--patch-4


    new files:
     resources/.arch-ids/test_zodb.py.id
     resources/.arch-ids/zodb.py.id resources/test_zodb.py
     resources/zodb.py

    modified files:
     Changelog


2005-11-03 18:12:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-3

    Summary:
      resources, fix memory files, set mtime on append
    Revision:
      itools--main--0.12--patch-3


    modified files:
     Changelog resources/memory.py


2005-11-02 06:24:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-2

    Summary:
      fix the changelog file
    Revision:
      itools--main--0.12--patch-2


    new files:
     .arch-ids/Changelog.id Changelog

    removed files:
     .arch-ids/Changelog.id Changelog


2005-11-02 06:24:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-1

    Summary:
      merge from the 0.11 branch
    Revision:
      itools--main--0.12--patch-1

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-56
       xml, fix attributes encoding in STL (#132)
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-57
       uri, fix query serialization (#130)
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-58
       html, fix serialization
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-59
       get ready to release 0.11.0
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-60
       fix setup.py so the command "register" works
    
